# beamhop

./: .gitignore  CONTEXT.md  CONTRIBUTING.md  DESIGN.md  PRODUCT.md  README.md  Readme.md  bunfig.toml  index.html  package.json  skills-lock.json  tsconfig.base.json  tsconfig.json  vite.config.ts
.changeset/: README.md
.github/workflows/: ci.yml  deploy.yml  docs.yml  release.yml
apps/acp-playground/: bunfig.toml  package.json  playwright.config.ts  tsconfig.json
apps/desktop/: .gitignore  README.md  build.ts  package.json  playwright.config.ts  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/docs/: astro.config.mjs  package.json
apps/host/: README.md  build-spa.ts  build.ts  bun-env.d.ts  package.json  tsconfig.json
apps/tauri/: Cargo.toml  README.md  tauri.conf.json
apps/web/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/web-joiner/: build.ts  package.json  playwright.config.ts  tsconfig.json
deck/: index.html
design-files/_archive/: design.tar
design-files/pi-mono-rpc-ui/: README.md
docs/: README.md  architecture.html  transport.d2
docs/adr/: 0001-hide-the-substrate.md
legacy-codes/: index.html  main.js  styles.css
protocols/: index.html
public/: CNAME
scripts/: dev.ts  fix-node-pty-perms.mjs  prepare-tauri.sh
src/: App.tsx  index.css
src/components/: Automation.tsx  BeamField.tsx  Connected.tsx  Constellation.tsx  Final.tsx  Floor.tsx  Footer.tsx  Hero.tsx  Memory.tsx  Nav.tsx  Team.tsx  (+4 more)
(+175 files in other folders)
